--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <div id="grid">
     </div>
     <p id="guesses"></p> 
+    <footer>
+      <p>Creado por Hugo Benitez. 2024. :3</p>
+      <p><a href="https://hugobenitezg1.github.io/wordle-ppy/">Open-source in GitHub</a></p>
+    </footer>
   </body>
 </html>
