--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Wordle PPY</title>
-        <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-  </head>
-  <body>
-    <h1 id="titulo">Wordle PPY</h1>
-    <input type="text" id="guess-input">
-    <button id="guess-button">Intentar</button>
-    <div id="grid">
-    </div>
-    <p id="guesses"></p> 
-    <footer>
-      <p>Creado por Hugo Benitez. 2024. :3</p>
-      <p><a href="https://hugobenitezg1.github.io/wordle-ppy/">Open-source in GitHub</a></p>
-    </footer>
-  </body>
+<head>
+  <title>Wordle PPY</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <h1 id="titulo">Wordle PPY🎮</h1>
+  <div class="recuadro">
+    <h2 id="subtitulo">Bienvenido. Adivina una palabra con 5 letras para ganar.Tienes 6 intentos. Suerte 😀</h2>
+  </div>
+  <input type="text" id="guess-input">
+  <button id="guess-button">Intentar</button>
+  <div id="grid"></div>
+  <p id="guesses"></p> 
+  <footer>
+    <p>© Creado por Hugo Benitez para el mejor Minibootcamp PPY. 2024. 😎</p>
+    <p><a href="https://hugobenitezg1.github.io/wordle-ppy/">Open-source in GitHub</a></p>
+  </footer>
+</body>
 </html>
