--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div id="grid"></div>
   <p id="guesses"></p>
   <div class="gif-container">
-    <img src="C:\Users\Hugo\Downloads\l5JY1lcatforppy.gif" alt="GIF de bienvenida">
+    <img src="https://raw.githubusercontent.com/hugobenitezg1/wordle-ppy/main/l5JY1lcatforppy.gif" alt="GIF de bienvenida">
   </div>
   <footer>
     <p>© Creado por Hugo Benitez para el mejor Minibootcamp PPY. 😎</p>
